--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,18 @@
 #hangmanDrawing{
 
-	background-color: pink;
+	background-color: #9fced3;
+	
 }
 
 canvas{
 
 	border: 1px solid black;
 	padding: 10px;
+	background-image: url()
+}
+
+
+
+.text{
+	color: white;
 }
